# drf_template

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
config/: asgi.py  settings.py  urls.py  wsgi.py
