[project]
name = "drf-template"
version = "0.1.0"
description = "Django REST framework project template"
authors = [{ name = "Kevin Rodriguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13.1"
readme = "README.md"
dependencies = [
    "djangorestframework==3.16.1",
    "psycopg2-binary==2.9.11",
    "django-cors-headers==4.9.0",
    "nplusone==1.0.0",
]

[dependency-groups]
test = [
    "coverage==7.9.1",
    "pytest-django==4.11.1",
    "pytest==8.4.1",
]
dev = [
    "flake8==7.3.0",
    "autoflake==2.3.1",
    "mypy==1.16.1",
    "isort==6.0.1",
    "black==25.1.0",
    "pre-commit==4.2.0",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
