[project]
name = "drf-template"
version = "0.1.0"
description = "Django REST framework project template"
authors = [{ name = "Kevin Rodriguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13.1"
readme = "README.md"
dependencies = [
    "djangorestframework==3.16.1",
    "psycopg2-binary==2.9.11",
    "django-cors-headers==4.9.0",
    "nplusone==1.0.0",
]

[dependency-groups]
test = [
    "coverage==7.13.0",
    "pytest-django==4.11.1",
    "pytest==9.0.2",
]
dev = [
    "pre-commit (==4.5.0)",
    "ruff (==0.14.9)",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

# Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E203", "E305"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
